--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meowphoria</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meowphoria Music Player</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="player-container">
-    <div id="playlist-container"></div>
+    <header>
+        <h1>Meowphoria Music Player</h1>
+    </header>
 
-    <div id="player-controls">
-      <button id="prev">Previous</button>
-      <button id="play">Play</button>
-      <button id="next">Next</button>
+    <main>
+        <section id="albums" class="album-grid">
+            <!-- Albums will be dynamically populated here -->
+        </section>
 
-      <audio id="audio-player" controls></audio>
-    </div>
-  </div>
+        <!-- Custom Audio Player -->
+        <section id="player" class="audio-player">
+            <div class="player-controls">
+                <button id="prev-track">⏪</button>
+                <span id="current-track">Select a track</span>
+                <button id="next-track">⏩</button>
+            </div>
+            <div class="audio-container">
+                <audio id="audio-player" controls></audio>
+            </div>
+        </section>
+    </main>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
