--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <header>
+        <!-- Logo with hover effect and link to the external website -->
+        <a href="https://generalgoldyt.com" target="_blank">
+            <img src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
+        </a>
         <h1>Meowphoria Music Player</h1>
     </header>
 
