--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Logo at the top-left corner -->
+    <a href="https://generalgoldyt.com" target="_blank">
+        <img id="logo" src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
+    </a>
+
+    <!-- Header content -->
     <header>
-        <!-- Logo with hover effect and link to the external website -->
-        <a href="https://generalgoldyt.com" target="_blank">
-            <img src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
-        </a>
         <h1>Meowphoria Music Player</h1>
     </header>
 
