--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Logo at the top-left corner -->
-    <a href="https://generalgoldyt.com" target="_blank">
-        <img id="logo" src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
-    </a>
-
-    <!-- Header content -->
+    <!-- Header with Logo and Title -->
     <header>
+        <!-- Logo with hover effect and link to the external website -->
+        <a href="https://generalgoldyt.com" target="_blank">
+            <img id="logo" src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
+        </a>
         <h1>Meowphoria Music Player</h1>
     </header>
 
@@ -31,6 +30,11 @@
             </div>
             <div class="audio-container">
                 <audio id="audio-player" controls></audio>
+            </div>
+            <div id="track-section">
+                <div class="track-list">
+                    <!-- Track buttons will be dynamically populated here -->
+                </div>
             </div>
         </section>
     </main>
