--- a/index.html
+++ b/index.html
@@ -7,37 +7,42 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header with Logo and Title -->
     <header>
-        <!-- Logo with hover effect and link to the external website -->
-        <a href="https://generalgoldyt.com" target="_blank">
-            <img id="logo" src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="General Gold Logo">
-        </a>
+        <div class="logo">
+            <img id="meowphoria-logo" src="https://generalgoldyt.com/webhook/GeneralGoldLogo.png" alt="Meowphoria Logo">
+        </div>
         <h1>Meowphoria Music Player</h1>
+        <p>Experience music like never before!</p>
     </header>
 
     <main>
-        <section id="albums" class="album-grid">
-            <!-- Albums will be dynamically populated here -->
+        <!-- Audio Player Section -->
+        <div class="player">
+            <button id="prev" title="Previous Track">⏮</button>
+            <button id="play-pause" title="Play/Pause">▶</button>
+            <button id="next" title="Next Track">⏭</button>
+            <button id="shuffle" title="Shuffle">🔀</button>
+            <button id="loop" title="Loop">🔁</button>
+            <span id="current-time">0:00</span> / <span id="duration">0:00</span>
+            <input type="range" id="seek-bar" value="0" title="Seek">
+        </div>
+
+        <!-- Playlist Management Section -->
+        <section class="playlist-manager">
+            <h2>Your Playlists</h2>
+            <div id="playlists"></div>
+            <button id="new-playlist">Create New Playlist</button>
         </section>
 
-        <!-- Custom Audio Player -->
-        <section id="player" class="audio-player">
-            <div class="player-controls">
-                <button id="prev-track">⏪</button>
-                <span id="current-track">Select a track</span>
-                <button id="next-track">⏩</button>
-            </div>
-            <div class="audio-container">
-                <audio id="audio-player" controls></audio>
-            </div>
-            <div id="track-section">
-                <div class="track-list">
-                    <!-- Track buttons will be dynamically populated here -->
-                </div>
-            </div>
+        <!-- Track Management Section -->
+        <section class="track-manager">
+            <h2>Tracks</h2>
+            <ul id="track-list"></ul>
+            <input type="file" id="upload-track" accept="audio/*" multiple>
         </section>
     </main>
+
+    <audio id="audio"></audio>
 
     <script src="script.js"></script>
 </body>
